---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2023-06-
  Features:
    - Added bismuth glass (placeholder graphics)
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2023-06-09
  Features:
    - Fixed mod being broken by PCB solder not being unlockable, and therefore there would be almost no use for bismuth at all xD
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2023-05-31
  Features:
    - (K2) fixed duplicate ammo recipes 
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2023-05-30
  Features:
    - (SE) Changed bismuth output from core mining to be slighly more realistic
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2023-05-27
  Features:
    - Fixed mod not loading without brasstacks (oops)
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2023-05-22
  Features:
    - Greatly decreased the bismuth ore byproduct from other ore (balancing feedback is very much welcome:))
    - Added ammo made from bismuth that is slightly worse, but cheaper (to have bismuth go somewhere during the early game)
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2023-05-16
  Features:
    - Added changelog
    - Fixed ore density being too high
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2023-05-14
  Features:
    - Added mod settings
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2023-05-13
  Features:
    - Release