@@ -1,5 +1,5 @@
 use in glass!!!!
-
+tweak silver in solder 
 ceramics????
 
 change bismuth ore to bismuth oxide?
